--- a/impdlg.ui
+++ b/impdlg.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string> 导入数据包路径</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
