--- a/advancesearchdlg.ui
+++ b/advancesearchdlg.ui
@@ -52,8 +52,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>298</width>
-               <height>356</height>
+               <width>271</width>
+               <height>391</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -232,8 +232,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>314</width>
-               <height>340</height>
+               <width>271</width>
+               <height>391</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout">
@@ -385,18 +385,18 @@
                 </item>
                 <item>
                  <widget class="QDateEdit" name="movepartEndDateEdit">
+                  <property name="displayFormat">
+                   <string>yyyy年/MM月/dd日</string>
+                  </property>
+                  <property name="calendarPopup">
+                   <bool>true</bool>
+                  </property>
                   <property name="date">
                    <date>
                     <year>2014</year>
                     <month>1</month>
                     <day>1</day>
                    </date>
-                  </property>
-                  <property name="displayFormat">
-                   <string>yyyy年/MM月/dd日</string>
-                  </property>
-                  <property name="calendarPopup">
-                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
@@ -433,8 +433,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>298</width>
-               <height>356</height>
+               <width>271</width>
+               <height>391</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_15">
@@ -572,8 +572,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>282</width>
-               <height>607</height>
+               <width>254</width>
+               <height>488</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -973,9 +973,9 @@
              <property name="geometry">
               <rect>
                <x>0</x>
-               <y>0</y>
-               <width>314</width>
-               <height>887</height>
+               <y>-301</y>
+               <width>254</width>
+               <height>712</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -1530,6 +1530,159 @@
           </item>
          </layout>
         </widget>
+        <widget class="QWidget" name="page_7">
+         <layout class="QGridLayout" name="gridLayout_16">
+          <item row="0" column="0">
+           <widget class="QScrollArea" name="scrollArea_8">
+            <property name="widgetResizable">
+             <bool>true</bool>
+            </property>
+            <widget class="QWidget" name="scrollAreaWidgetContents_8">
+             <property name="geometry">
+              <rect>
+               <x>0</x>
+               <y>0</y>
+               <width>271</width>
+               <height>391</height>
+              </rect>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_6">
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_45">
+                <item>
+                 <widget class="QLabel" name="label_44">
+                  <property name="text">
+                   <string>铁谱片编号</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="feg_ferrographysheetidChkBox">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QComboBox" name="feg_ferrographysheetidCbBox">
+                  <property name="editable">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_70">
+                <item>
+                 <widget class="QLabel" name="label_69">
+                  <property name="text">
+                   <string>铁谱片制取人</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="feg_ferrographymakestuffChkBox">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLineEdit" name="feg_ferrographymakestuffLineEdit"/>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_69">
+                <item>
+                 <widget class="QLabel" name="label_68">
+                  <property name="text">
+                   <string>铁谱片制取方法</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="feg_ferrographymakemethodChkBox">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QComboBox" name="feg_ferrographymakemethodCbBox">
+                  <property name="editable">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_100">
+                <item>
+                 <widget class="QLabel" name="label_66">
+                  <property name="text">
+                   <string>分析铁谱仪型号</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="feg_ferrographyanalyzertypeChkBox">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QComboBox" name="feg_ferrographyanalyzertypeCbBox">
+                  <property name="editable">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_68">
+                <item>
+                 <widget class="QLabel" name="label_67">
+                  <property name="text">
+                   <string>铁谱片制取油样消耗量</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="feg_ferrographymakeoilconsumptionChkBox">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLineEdit" name="feg_ferrographymakeoilconsumptionLineEdit"/>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <spacer name="verticalSpacer_4">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>40</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+             </layout>
+            </widget>
+           </widget>
+          </item>
+         </layout>
+        </widget>
         <widget class="QWidget" name="page_6">
          <layout class="QGridLayout" name="gridLayout_15">
           <item row="0" column="0">
@@ -1542,8 +1695,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>282</width>
-               <height>362</height>
+               <width>271</width>
+               <height>391</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -1763,159 +1916,6 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="page_7">
-         <layout class="QGridLayout" name="gridLayout_16">
-          <item row="0" column="0">
-           <widget class="QScrollArea" name="scrollArea_8">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="scrollAreaWidgetContents_8">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>298</width>
-               <height>356</height>
-              </rect>
-             </property>
-             <layout class="QVBoxLayout" name="verticalLayout_6">
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_45">
-                <item>
-                 <widget class="QLabel" name="label_44">
-                  <property name="text">
-                   <string>铁谱片编号</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QCheckBox" name="feg_ferrographysheetidChkBox">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QComboBox" name="feg_ferrographysheetidCbBox">
-                  <property name="editable">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_70">
-                <item>
-                 <widget class="QLabel" name="label_69">
-                  <property name="text">
-                   <string>铁谱片制取人</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QCheckBox" name="feg_ferrographymakestuffChkBox">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLineEdit" name="feg_ferrographymakestuffLineEdit"/>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_69">
-                <item>
-                 <widget class="QLabel" name="label_68">
-                  <property name="text">
-                   <string>铁谱片制取方法</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QCheckBox" name="feg_ferrographymakemethodChkBox">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QComboBox" name="feg_ferrographymakemethodCbBox">
-                  <property name="editable">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_100">
-                <item>
-                 <widget class="QLabel" name="label_66">
-                  <property name="text">
-                   <string>分析铁谱仪型号</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QCheckBox" name="feg_ferrographyanalyzertypeChkBox">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QComboBox" name="feg_ferrographyanalyzertypeCbBox">
-                  <property name="editable">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_68">
-                <item>
-                 <widget class="QLabel" name="label_67">
-                  <property name="text">
-                   <string>铁谱片制取油样消耗量</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QCheckBox" name="feg_ferrographymakeoilconsumptionChkBox">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLineEdit" name="feg_ferrographymakeoilconsumptionLineEdit"/>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <spacer name="verticalSpacer_4">
-                <property name="orientation">
-                 <enum>Qt::Vertical</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>20</width>
-                  <height>40</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-             </layout>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
         <widget class="QWidget" name="page_8">
          <layout class="QGridLayout" name="gridLayout_17">
           <item row="0" column="0">
@@ -1928,8 +1928,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>282</width>
-               <height>572</height>
+               <width>254</width>
+               <height>460</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -2315,7 +2315,7 @@
         <item>
          <widget class="QPushButton" name="exportBtn">
           <property name="text">
-           <string>导出查询</string>
+           <string>导出查询结果</string>
           </property>
          </widget>
         </item>
@@ -2335,7 +2335,7 @@
         <item>
          <widget class="QPushButton" name="importBtn">
           <property name="text">
-           <string>导入查询</string>
+           <string>导入查询结果</string>
           </property>
          </widget>
         </item>
@@ -2353,14 +2353,14 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="addtoBtn">
+         <widget class="QPushButton" name="deleteDataButton">
           <property name="text">
-           <string>添加属性</string>
+           <string>删除查询结果</string>
           </property>
          </widget>
         </item>
         <item>
-         <spacer name="verticalSpacer_10">
+         <spacer name="verticalSpacer_7">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
@@ -2373,14 +2373,34 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="modifyButton">
+         <widget class="QPushButton" name="addtoBtn">
           <property name="text">
-           <string>修改属性</string>
+           <string>添加查询属性</string>
           </property>
          </widget>
         </item>
         <item>
-         <spacer name="verticalSpacer_7">
+         <spacer name="verticalSpacer_11">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="deletepropertyButton">
+          <property name="text">
+           <string>删除查询属性</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="verticalSpacer_10">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
