--- a/RegionCompetition.ui
+++ b/RegionCompetition.ui
@@ -407,21 +407,19 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="_labelRulerText">
-          <property name="minimumSize">
-           <size>
-            <width>120</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>81</width>
-            <height>17</height>
-           </size>
-          </property>
+         <widget class="QLabel" name="_label_pixel">
           <property name="text">
-           <string/>
+           <string>50像素</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="_spinBox_measure"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="_label_micrometer">
+          <property name="text">
+           <string>微米</string>
           </property>
          </widget>
         </item>
