--- a/RegionCompetition.ui
+++ b/RegionCompetition.ui
@@ -45,6 +45,9 @@
           <property name="text">
            <string>笔画</string>
           </property>
+          <property name="shortcut">
+           <string>Ctrl+1</string>
+          </property>
           <attribute name="buttonGroup">
            <string notr="true">buttonGroup</string>
           </attribute>
@@ -195,6 +198,9 @@
           <property name="text">
            <string>矩形</string>
           </property>
+          <property name="shortcut">
+           <string>Ctrl+2</string>
+          </property>
           <attribute name="buttonGroup">
            <string notr="true">buttonGroup</string>
           </attribute>
@@ -205,6 +211,9 @@
           <property name="text">
            <string>多边形</string>
           </property>
+          <property name="shortcut">
+           <string>Ctrl+3</string>
+          </property>
           <attribute name="buttonGroup">
            <string notr="true">buttonGroup</string>
           </attribute>
@@ -214,6 +223,9 @@
          <widget class="QRadioButton" name="radioManualLabelling">
           <property name="text">
            <string>手工</string>
+          </property>
+          <property name="shortcut">
+           <string>Ctrl+4</string>
           </property>
           <attribute name="buttonGroup">
            <string notr="true">buttonGroup</string>
@@ -451,9 +463,9 @@
  <resources/>
  <connections/>
  <buttongroups>
+  <buttongroup name="buttonGroup_2"/>
   <buttongroup name="buttonGroup_3"/>
   <buttongroup name="buttonGroup_4"/>
   <buttongroup name="buttonGroup"/>
-  <buttongroup name="buttonGroup_2"/>
  </buttongroups>
 </ui>
