--- a/RegionCompetition.ui
+++ b/RegionCompetition.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>258</width>
-    <height>477</height>
+    <width>295</width>
+    <height>614</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -49,7 +49,7 @@
            <string>Ctrl+1</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -83,7 +83,7 @@
            <string>前景</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -93,7 +93,7 @@
            <string>背景</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -103,7 +103,7 @@
            <string>橡皮</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -140,7 +140,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -153,7 +153,7 @@
            <bool>false</bool>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -163,7 +163,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -202,7 +202,7 @@
            <string>Ctrl+2</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -215,7 +215,7 @@
            <string>Ctrl+3</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -228,11 +228,68 @@
            <string>Ctrl+4</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
        </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <item>
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>线宽</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioLineWidthThin">
+          <property name="text">
+           <string>细</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <attribute name="buttonGroup">
+           <string>buttonGroup_2</string>
+          </attribute>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioLineWidthMedium">
+          <property name="text">
+           <string>中</string>
+          </property>
+          <attribute name="buttonGroup">
+           <string>buttonGroup_2</string>
+          </attribute>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioLineWidthThick">
+          <property name="text">
+           <string>粗</string>
+          </property>
+          <attribute name="buttonGroup">
+           <string>buttonGroup_2</string>
+          </attribute>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <widget class="QLabel" name="label_3">
@@ -262,63 +319,6 @@
         </item>
        </layout>
       </item>
-      <item>
-       <spacer name="verticalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_6">
-        <item>
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>线宽</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="radioLineWidthThin">
-          <property name="text">
-           <string>细</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-          <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
-          </attribute>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="radioLineWidthMedium">
-          <property name="text">
-           <string>中</string>
-          </property>
-          <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
-          </attribute>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="radioLineWidthThick">
-          <property name="text">
-           <string>粗</string>
-          </property>
-          <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
-          </attribute>
-         </widget>
-        </item>
-       </layout>
-      </item>
      </layout>
     </widget>
    </item>
@@ -340,8 +340,26 @@
      <property name="title">
       <string>图像基本操作</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="2" column="0">
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_7">
+        <item>
+         <widget class="QRadioButton" name="radioNotColor">
+          <property name="text">
+           <string>反色</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioBrightness">
+          <property name="text">
+           <string>亮度</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_9">
         <item>
          <widget class="QLabel" name="labelSliderLeft">
@@ -366,67 +384,86 @@
         </item>
        </layout>
       </item>
-      <item row="1" column="0">
-       <layout class="QHBoxLayout" name="horizontalLayout_8">
-        <item>
-         <widget class="QRadioButton" name="radioNotColor">
-          <property name="text">
-           <string>反色</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="radioMesuarement">
-          <property name="text">
-           <string>测量</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+      <item>
+       <spacer name="verticalSpacer_5">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
-      <item row="3" column="0">
+      <item>
+       <widget class="QLabel" name="_labelMeasure">
+        <property name="text">
+         <string>测量</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_10">
         <item>
-         <widget class="Line" name="_line">
-          <property name="minimumSize">
-           <size>
-            <width>50</width>
-            <height>16</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>61</width>
-            <height>16</height>
-           </size>
-          </property>
-          <property name="baseSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <weight>75</weight>
-            <bold>true</bold>
-            <strikeout>true</strikeout>
-           </font>
-          </property>
+         <widget class="QComboBox" name="_comboBoxLarger">
+          <item>
+           <property name="text">
+            <string>100x</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>200x</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>500x</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="_spinBox_pixel">
+          <property name="maximum">
+           <number>10000</number>
+          </property>
+          <property name="value">
+           <number>284</number>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="_label_pixel">
           <property name="text">
-           <string>50像素</string>
+           <string>像素</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="_spinBox_measure"/>
+         <widget class="QSpinBox" name="_spinBox_measure">
+          <property name="maximum">
+           <number>10000</number>
+          </property>
+          <property name="value">
+           <number>200</number>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QLabel" name="_label_micrometer">
@@ -437,19 +474,97 @@
         </item>
        </layout>
       </item>
-      <item row="0" column="0">
-       <layout class="QHBoxLayout" name="horizontalLayout_7">
+      <item>
+       <spacer name="verticalSpacer_6">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>尺寸</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_11">
         <item>
-         <widget class="QRadioButton" name="radioScale">
-          <property name="text">
-           <string>尺寸</string>
-          </property>
-         </widget>
+         <layout class="QHBoxLayout" name="horizontalLayout_8">
+          <item>
+           <widget class="QLineEdit" name="_lineEdit_width">
+            <property name="maximumSize">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+            <property name="placeholderText">
+             <string>0</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>x</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="_lineEdit_height">
+            <property name="maximumSize">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+            <property name="placeholderText">
+             <string>0</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioBrightness">
-          <property name="text">
-           <string>亮度</string>
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QSlider" name="_horizontalSliderScale">
+          <property name="maximumSize">
+           <size>
+            <width>90</width>
+            <height>19</height>
+           </size>
+          </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>20</number>
+          </property>
+          <property name="value">
+           <number>10</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
